added css to improve heading

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div id="content">
-        <div id="header">
 
+    <div id="header">
+        <div id="header-content">
             <div id="header-bar">
                 <h2>Header Logo</h2>
                 <div id="header-links-right">
@@ -26,12 +26,16 @@
                     <p>This website has some subext that goes here under the main title</p>
                     <button id="signup-main">Sign up</button>
                 </div>
-                <img src="media/forest.jpg" width="25%" height="25%">
-            </div>
+                <img id="forest" src="media/forest.jpg" width="40%" height="40%">
 
+            </div>
         </div>
-        <div id="info">
-            <h2>Some random information.</h2>
+    </div>
+    <div id="info">
+        <div id="info-content">
+
+            <h2 id="info-header">Some random information.</h2>
+
             <div id="images">
                 <div class="caption-img">
                     <img>
@@ -51,21 +55,22 @@
                 </div>
             </div>
         </div>
-        <div id="quote-section">
-            <h3 id="quote">some quote blah blah blah</h3>
-            <h4 id="quote-author">whoever said it</h4>
-        </div>
-        <div id="call-to-action">
-            <div id="sign-up-left">
-                <h3>Call to action its time!</h3>
-                <p>blah blah blah</p>
-            </div>
-            <button id="signup-bottom">sign up</button>
-        </div>
-        <div id="footer">
-            <p>copyright blah blah stuff</p>
-        </div>
     </div>
+    <div id="quote-section">
+        <h3 id="quote">some quote blah blah blah</h3>
+        <h4 id="quote-author">whoever said it</h4>
+    </div>
+    <div id="call-to-action">
+        <div id="sign-up-left">
+            <h3>Call to action its time!</h3>
+            <p>blah blah blah</p>
+        </div>
+        <button id="signup-bottom">sign up</button>
+    </div>
+    <div id="footer">
+        <p>copyright blah blah stuff</p>
+    </div>
+
 </body>
 <script src="source.js"></script>
 
