css added website styling finished

--- a/index.html
+++ b/index.html
@@ -37,35 +37,44 @@
             <h2 id="info-header">Some random information.</h2>
 
             <div id="images">
-                <div class="caption-img">
-                    <img>
-                    <p>blah blah blah</p>
+                <div class="img-caption-container">
+                    <div class="info-img">image</div>
+                    <p class="img-caption">aption blah blah blah this text should be centered</p>
                 </div>
-                <div class="caption-img">
-                    <img>
-                    <p>blah blah blah</p>
+                <div class="img-caption-container">
+                    <div class="info-img">image</div>
+                    <p class="img-caption"> aption blah blah blah this text should be centered</p>
                 </div>
-                <div class="caption-img">
-                    <img>
-                    <p>blah blah blah</p>
+                <div class="img-caption-container">
+                    <div class="info-img">image</div>
+                    <p class="img-caption">aption blah blah blah this text should be centered</p>
                 </div>
-                <div class="caption-img">
-                    <img>
-                    <p>blah blah blah</p>
+                <div class="img-caption-container">
+                    <div class="info-img">image</div>
+                    <p class="img-caption">caption blah blah blah this text should be centered</p>
                 </div>
+
+
             </div>
         </div>
     </div>
     <div id="quote-section">
-        <h3 id="quote">some quote blah blah blah</h3>
-        <h4 id="quote-author">whoever said it</h4>
+        <div id="quote-content">
+            <h3 id="quote">Crom, I have never prayed to you before. I have no tongue for it. No one, not even you, will
+                remember if we were good men or bad. Why we fought, or why we died. All that matters is that two stood
+                against many. That's what's important! Valor pleases you, Crom... so grant me one request. Grant me
+                revenge! And if you do not listen, then to HELL with you!</h3>
+            <h4 id="quote-author">-Conan the Barbarian</h4>
+        </div>
     </div>
     <div id="call-to-action">
-        <div id="sign-up-left">
-            <h3>Call to action its time!</h3>
-            <p>blah blah blah</p>
+        <div id="call-to-action-content">
+            <div id="sign-up-left">
+                <h3>Call to action its time!</h3>
+                <p>blah blah blah</p>
+            </div>
+            <button id="signup-bottom">sign up</button>
         </div>
-        <button id="signup-bottom">sign up</button>
     </div>
     <div id="footer">
         <p>copyright blah blah stuff</p>
