--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <div id="header-bar">
                 <h2>Header Logo</h2>
                 <div id="header-links-right">
-                    <h4>header link one</h4>
-                    <h4>header link two</h4>
-                    <h4>header link three</h4>
+                    <h4>Home</h4>
+                    <h4>About us</h4>
+                    <h4>Your Profile</h4>
                 </div>
             </div>
             <div id="main-title">
                 <div id="main-title-left">
-                    <h1> This website is awesome</h1>
-                    <p>This website has some subext that goes here under the main title</p>
+                    <h1> Your Local Hiking Club!</h1>
+                    <p>Join us and experience nature, get fit and meet new people today!</p>
                     <button id="signup-main">Sign up</button>
                 </div>
                 <img id="forest" src="media/forest.jpg" width="40%" height="40%">
@@ -34,24 +34,24 @@
     <div id="info">
         <div id="info-content">
 
-            <h2 id="info-header">Some random information.</h2>
+            <h2 id="info-header">Who Can Join?</h2>
 
             <div id="images">
                 <div class="img-caption-container">
-                    <div class="info-img">image</div>
-                    <p class="img-caption">aption blah blah blah this text should be centered</p>
+                    <img class="info-img" src="./media/forest-bridge.jpg" >
+                    <p class="img-caption">Beginner Hikers</p>
                 </div>
                 <div class="img-caption-container">
-                    <div class="info-img">image</div>
-                    <p class="img-caption"> aption blah blah blah this text should be centered</p>
+                    <img class="info-img" src="media/mountains.jpg">
+                    <p class="img-caption"> Intermediete Drifters</p>
                 </div>
                 <div class="img-caption-container">
-                    <div class="info-img">image</div>
-                    <p class="img-caption">aption blah blah blah this text should be centered</p>
+                    <img class="info-img" src="./media/snow.jpg" >
+                    <p class="img-caption">Advanced Adventurers</p>
                 </div>
                 <div class="img-caption-container">
-                    <div class="info-img">image</div>
-                    <p class="img-caption">caption blah blah blah this text should be centered</p>
+                    <img class="info-img" src="./media/lava.jpg" >
+                    <p class="img-caption">Master Nomads</p>
                 </div>
 
 
@@ -60,24 +60,21 @@
     </div>
     <div id="quote-section">
         <div id="quote-content">
-            <h3 id="quote">Crom, I have never prayed to you before. I have no tongue for it. No one, not even you, will
-                remember if we were good men or bad. Why we fought, or why we died. All that matters is that two stood
-                against many. That's what's important! Valor pleases you, Crom... so grant me one request. Grant me
-                revenge! And if you do not listen, then to HELL with you!</h3>
-            <h4 id="quote-author">-Conan the Barbarian</h4>
+            <h3 id="quote">"Not all those who wander are lost"</h3>
+            <h4 id="quote-author">-Bilbo</h4>
         </div>
     </div>
     <div id="call-to-action">
         <div id="call-to-action-content">
             <div id="sign-up-left">
-                <h3>Call to action its time!</h3>
-                <p>blah blah blah</p>
+                <h3>You See That Mountain? You Can Climb it.</h3>
+                <p>Sign Up Today!</p>
             </div>
             <button id="signup-bottom">sign up</button>
         </div>
     </div>
     <div id="footer">
-        <p>copyright blah blah stuff</p>
+        <p>Your Local Hiking Club Copyright</p>
     </div>
 
 </body>
